4.0.0
  2013-11-05
  Features
  * #53378: Table field for data
  * #53377: Filter for size and material
            Effected files:
            * ext_tables.php
            * ext_tables.sql
            * locallang_db.xml
            * tca.php
            * static
              * constants.txt
              * setup.txt
  * #53362: Fit it into TYPO3 6.x

3.0.8
  13-09-22
  Improvement
  # *i0007: Updating the manual
  # *i0006: caddy icon is controlled by Caddy constant
  # *i0007: caddy button is simplified
            * my_caddybutton substitutes
              * my_caddyimgsrc
              * my_caddyimgalt
              * my_caddylabel

3.0.7
  13-07-20
  Bugfix
  # *i0005: double div-tag in single view
            Effected files:
            * static/setup.txt

3.0.6
  13-06-28
  Improvements
  # *i0004: Update for Caddy 2.0.8

3.0.5
  13-06-27
  Improvement
  * #i0003: Improved caddy table structur
            Effected files:
            * static/caddy/constants.txt

3.0.4
  13-04-09
  Feature
  * #47068: Remove HTML template
            Effected files:

3.0.3
  13-04-07
  Feature
  * #47017: Ready TypoScript SEO configuration
            Effected files:
            * static/setup.txt

3.0.2
  13-03-29
  Feature
  * #42072: nested categories
            Effected files:
            * ext_emconf.php
            * ext_tables.php
            * ext_tables.sql
            * locallang_db.xml
            * tca.php
            * res
              * templates
                * default.css
            * static
              * constants.txt
              * setup.txt

3.0.0
  13-03-17
  Features
  * #46387: Caddy for list view
            Effected files:
            * res/templates
              * default.css
              * default.tmpl
            * static
              * constants.txt
              * setup.txt
  * #46386: Update CSS
            * Powermail CSS basic is moved to fancy 
            Effected files:
            * res/templates
              * default.css